@@ -49,8 +49,7 @@ public class ReconciliationManager {
         PrivateKey privateKey = keyFactory.generatePrivate(keySpec);
         
         // Build connection URL
-        String url = String.format(
-            "jdbc:snowflake://%s.snowflakecomputing.com",
+        String url = "jdbc:snowflake://%s.snowflakecomputing.com".formatted(
             config.getSnowflakeAccount()
         );
         
@@ -96,14 +95,14 @@ public class ReconciliationManager {
             // 1. Check and delete orphaned orders (orders without order_items)
             // Use a single operation to ensure count matches delete
             logger.info("Checking for orphaned orders...");
-            String deleteOrphanedOrdersSql = String.format(
+            String deleteOrphanedOrdersSql = (
                 "DELETE FROM %s.%s.%s " +
-                "WHERE order_id IN (" +
-                "  SELECT DISTINCT o.order_id " +
-                "  FROM %s.%s.%s o " +
-                "  LEFT JOIN %s.%s.%s oi ON o.order_id = oi.order_id " +
-                "  WHERE oi.order_id IS NULL" +
-                ")",
+                    "WHERE order_id IN (" +
+                    "  SELECT DISTINCT o.order_id " +
+                    "  FROM %s.%s.%s o " +
+                    "  LEFT JOIN %s.%s.%s oi ON o.order_id = oi.order_id " +
+                    "  WHERE oi.order_id IS NULL" +
+                    ")").formatted(
                 database, schema, ordersTable,
                 database, schema, ordersTable,
                 database, schema, orderItemsTable
@@ -114,8 +113,8 @@ public class ReconciliationManager {
             stats.put("orphanedOrdersFound", (long) deletedOrders);
             
             if (deletedOrders > 0) {
-                logger.warn("Found and deleted {} orphaned orders", 
-                    String.format("%,d", deletedOrders));
+                logger.warn("Found and deleted {} orphaned orders",
+                    "%,d".formatted(deletedOrders));
             } else {
                 logger.info("✓ No orphaned orders found");
             }
@@ -123,14 +122,14 @@ public class ReconciliationManager {
             // 2. Check and delete orphaned order_items (order_items without orders)
             // Use a single operation to ensure count matches delete
             logger.info("Checking for orphaned order_items...");
-            String deleteOrphanedItemsSql = String.format(
+            String deleteOrphanedItemsSql = (
                 "DELETE FROM %s.%s.%s " +
-                "WHERE order_id IN (" +
-                "  SELECT DISTINCT oi.order_id " +
-                "  FROM %s.%s.%s oi " +
-                "  LEFT JOIN %s.%s.%s o ON oi.order_id = o.order_id " +
-                "  WHERE o.order_id IS NULL" +
-                ")",
+                    "WHERE order_id IN (" +
+                    "  SELECT DISTINCT oi.order_id " +
+                    "  FROM %s.%s.%s oi " +
+                    "  LEFT JOIN %s.%s.%s o ON oi.order_id = o.order_id " +
+                    "  WHERE o.order_id IS NULL" +
+                    ")").formatted(
                 database, schema, orderItemsTable,
                 database, schema, orderItemsTable,
                 database, schema, ordersTable
@@ -141,8 +140,8 @@ public class ReconciliationManager {
             stats.put("orphanedItemsFound", (long) deletedItems);
             
             if (deletedItems > 0) {
-                logger.warn("Found and deleted {} orphaned order_items", 
-                    String.format("%,d", deletedItems));
+                logger.warn("Found and deleted {} orphaned order_items",
+                    "%,d".formatted(deletedItems));
             } else {
                 logger.info("✓ No orphaned order_items found");
             }
@@ -150,9 +149,9 @@ public class ReconciliationManager {
             // 3. Check and delete duplicate orders (keeping only one copy)
             logger.info("Checking for duplicate order_ids...");
             // First, count duplicates
-            String checkDuplicatesSql = String.format(
+            String checkDuplicatesSql = (
                 "SELECT COUNT(*) - COUNT(DISTINCT order_id) as duplicate_count " +
-                "FROM %s.%s.%s",
+                    "FROM %s.%s.%s").formatted(
                 database, schema, ordersTable
             );
             
@@ -163,45 +162,45 @@ public class ReconciliationManager {
             rs.close();
             
             if (stats.get("duplicateOrdersFound") > 0) {
-                logger.warn("Found {} duplicate orders. Deleting duplicates...", 
-                    String.format("%,d", stats.get("duplicateOrdersFound")));
+                logger.warn("Found {} duplicate orders. Deleting duplicates...",
+                    "%,d".formatted(stats.get("duplicateOrdersFound")));
                 
                 // Delete duplicates, keeping only the first occurrence of each order_id
-                String deleteDuplicatesSql = String.format(
+                String deleteDuplicatesSql = (
                     "DELETE FROM %s.%s.%s " +
-                    "WHERE (order_id, order_date, total_amount) IN (" +
-                    "  SELECT order_id, order_date, total_amount " +
-                    "  FROM (" +
-                    "    SELECT " +
-                    "      order_id, " +
-                    "      order_date, " +
-                    "      total_amount, " +
-                    "      ROW_NUMBER() OVER (PARTITION BY order_id ORDER BY order_date) as rn " +
-                    "    FROM %s.%s.%s" +
-                    "  ) " +
-                    "  WHERE rn > 1" +
-                    ")",
+                        "WHERE (order_id, order_date, total_amount) IN (" +
+                        "  SELECT order_id, order_date, total_amount " +
+                        "  FROM (" +
+                        "    SELECT " +
+                        "      order_id, " +
+                        "      order_date, " +
+                        "      total_amount, " +
+                        "      ROW_NUMBER() OVER (PARTITION BY order_id ORDER BY order_date) as rn " +
+                        "    FROM %s.%s.%s" +
+                        "  ) " +
+                        "  WHERE rn > 1" +
+                        ")").formatted(
                     database, schema, ordersTable,
                     database, schema, ordersTable
                 );
                 
                 int deletedDuplicates = stmt.executeUpdate(deleteDuplicatesSql);
                 stats.put("duplicateOrdersDeleted", (long) deletedDuplicates);
-                logger.info("Deleted {} duplicate order records", 
-                    String.format("%,d", deletedDuplicates));
+                logger.info("Deleted {} duplicate order records",
+                    "%,d".formatted(deletedDuplicates));
             } else {
                 logger.info("✓ No duplicate orders found");
             }
             
             // 4. Get final counts
-            rs = stmt.executeQuery(String.format("SELECT COUNT(*) FROM %s.%s.%s", 
+            rs = stmt.executeQuery("SELECT COUNT(*) FROM %s.%s.%s".formatted(
                 database, schema, ordersTable));
             if (rs.next()) {
                 stats.put("finalOrdersCount", rs.getLong(1));
             }
             rs.close();
             
-            rs = stmt.executeQuery(String.format("SELECT COUNT(*) FROM %s.%s.%s", 
+            rs = stmt.executeQuery("SELECT COUNT(*) FROM %s.%s.%s".formatted(
                 database, schema, orderItemsTable));
             if (rs.next()) {
                 stats.put("finalItemsCount", rs.getLong(1));
@@ -210,14 +209,14 @@ public class ReconciliationManager {
             
             // Log summary
             logger.info("=== Reconciliation Summary ===");
-            logger.info("Orphaned orders found: {}", String.format("%,d", stats.get("orphanedOrdersFound")));
-            logger.info("Orphaned orders deleted: {}", String.format("%,d", stats.get("orphanedOrdersDeleted")));
-            logger.info("Orphaned items found: {}", String.format("%,d", stats.get("orphanedItemsFound")));
-            logger.info("Orphaned items deleted: {}", String.format("%,d", stats.get("orphanedItemsDeleted")));
-            logger.info("Duplicate orders found: {}", String.format("%,d", stats.get("duplicateOrdersFound")));
-            logger.info("Duplicate orders deleted: {}", String.format("%,d", stats.get("duplicateOrdersDeleted")));
-            logger.info("Final orders count: {}", String.format("%,d", stats.get("finalOrdersCount")));
-            logger.info("Final order_items count: {}", String.format("%,d", stats.get("finalItemsCount")));
+            logger.info("Orphaned orders found: {}", "%,d".formatted(stats.get("orphanedOrdersFound")));
+            logger.info("Orphaned orders deleted: {}", "%,d".formatted(stats.get("orphanedOrdersDeleted")));
+            logger.info("Orphaned items found: {}", "%,d".formatted(stats.get("orphanedItemsFound")));
+            logger.info("Orphaned items deleted: {}", "%,d".formatted(stats.get("orphanedItemsDeleted")));
+            logger.info("Duplicate orders found: {}", "%,d".formatted(stats.get("duplicateOrdersFound")));
+            logger.info("Duplicate orders deleted: {}", "%,d".formatted(stats.get("duplicateOrdersDeleted")));
+            logger.info("Final orders count: {}", "%,d".formatted(stats.get("finalOrdersCount")));
+            logger.info("Final order_items count: {}", "%,d".formatted(stats.get("finalItemsCount")));
             
             if (stats.get("orphanedOrdersFound") == 0 && 
                 stats.get("orphanedItemsFound") == 0 && 
